# CalX-Fireware

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  app_main.c
main/captive_portal/: portal_html.h
main/config/: calx_config.h
main/core/: event_manager.c  event_manager.h  logger.c  logger.h  system_state.c  system_state.h  time_manager.c  time_manager.h
main/drivers/: battery_manager.c  battery_manager.h  display_driver.c  display_driver.h  input_manager.c  input_manager.h  power_manager.c  power_manager.h
main/network/: api_client.c  api_client.h  web_display.c  web_display.h  wifi_manager.c  wifi_manager.h
main/ota/: ota_manager.c  ota_manager.h
main/storage/: security_manager.c  security_manager.h  storage_manager.c  storage_manager.h
main/ui/: text_renderer.c  text_renderer.h  ui_manager.c  ui_manager.h
